@@ -1,6 +1,8 @@
 #ifndef POSIX_MQ_H
 #define POSIX_MQ_H
 
+#define PSE51_MQ_FSTORE_LIMIT 64
+
 int pse51_mq_pkg_init(void);
 
 #endif /* POSIX_MQ_H */
